[gd_scene load_steps=5 format=3 uid="uid://dxb4r5t7dk0lr"]

[ext_resource type="Script" path="res://scenes/menus/pause_menu.gd" id="1_n08hk"]
[ext_resource type="PackedScene" uid="uid://cw8og54hjiism" path="res://scenes/menus/settings_menu.tscn" id="2_ka3vd"]

[sub_resource type="InputEventAction" id="InputEventAction_scuaq"]
action = &"ui_cancel"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_18k4o"]
events = [SubResource("InputEventAction_scuaq")]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 100
script = ExtResource("1_n08hk")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Panel"]
layout_mode = 2
offset_left = 45.0
offset_top = 35.0
offset_right = 323.0
offset_bottom = 137.0
theme_override_font_sizes/font_size = 72
text = "PAUSED"
horizontal_alignment = 1

[node name="PauseMenuContent" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PauseMenuContent"]
layout_mode = 2

[node name="Resume" type="Button" parent="MarginContainer/PauseMenuContent/VBoxContainer"]
layout_mode = 2
shortcut = SubResource("Shortcut_18k4o")
text = "Resume"

[node name="Settings" type="Button" parent="MarginContainer/PauseMenuContent/VBoxContainer"]
layout_mode = 2
text = "Settings
"

[node name="Menu" type="Button" parent="MarginContainer/PauseMenuContent/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="SettingsMenuContent" parent="MarginContainer" instance=ExtResource("2_ka3vd")]
visible = false
layout_mode = 2

[connection signal="pressed" from="MarginContainer/PauseMenuContent/VBoxContainer/Resume" to="." method="unpause"]
[connection signal="pressed" from="MarginContainer/PauseMenuContent/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/PauseMenuContent/VBoxContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="return_to_previous" from="MarginContainer/SettingsMenuContent" to="." method="_on_settings_menu_return_to_previous"]
